Fix user access token problem