@@ -1,39 +1,53 @@
 package com.trainingplatform.userservice.service;
 
-import com.trainingplatform.userservice.config.KeycloakClientConfig;
-import com.trainingplatform.userservice.model.User;
+import com.trainingplatform.userservice.model.OAuth2ResponseModel;
 import com.trainingplatform.userservice.model.UserCredentials;
 import lombok.RequiredArgsConstructor;
 import org.keycloak.admin.client.Keycloak;
 import org.keycloak.admin.client.resource.UsersResource;
 import org.keycloak.representations.idm.CredentialRepresentation;
 import org.keycloak.representations.idm.UserRepresentation;
+import org.springframework.beans.factory.BeanFactory;
 import org.springframework.beans.factory.annotation.Value;
-import org.springframework.http.HttpEntity;
-import org.springframework.http.HttpMethod;
 import org.springframework.http.ResponseEntity;
+import org.springframework.security.oauth2.client.OAuth2RestOperations;
 import org.springframework.stereotype.Service;
-import org.springframework.util.MultiValueMap;
-import org.springframework.web.client.RestTemplate;
 
 import javax.annotation.PostConstruct;
 import javax.ws.rs.core.Response;
 import java.util.Collections;
-import java.util.Map;
+import java.util.List;
 
 @Service
 @RequiredArgsConstructor
 public class KeycloakService {
 
-    // Inject keycloak instance
+    // Inject dependencies
     private final Keycloak keycloak;
-    private final RestTemplate restTemplate;
-    private final KeycloakClientConfig.RestUtil restUtil;
+    private final OAuth2ResponseModel.RequestBuilder oAuth2RequestBuilder;
+    private final BeanFactory beanFactory;
 
     @Value("${keycloak.realm}")
     private String realm;
 
+    @Value("${keycloak.resource}")
+    private String oauth2ClientId;
+
+    @Value("${keycloak.credentials.secret}")
+    private String oauth2ClientSecret;
+
+    @Value("${security.oauth2.client.scope}")
+    private String oauth2Scope;
+
+    @Value("${security.oauth2.client.grant-type}")
+    private String oauth2GrantType;
+
+    @Value("${security.oauth2.client.access-token-uri}")
+    private String oauth2TokenEndpoint;
+
+
     private UsersResource usersResource;
+
 
     @PostConstruct
     public void initUserResource() {
@@ -68,11 +82,18 @@ public class KeycloakService {
     }
 
     public ResponseEntity loginToKeycloak(UserCredentials userCredentials) {
-        HttpEntity<MultiValueMap<String, String>> httpEntity = restUtil.createHttpEntityForTokenRequest();
-        httpEntity.getBody().put("username", Collections.singletonList(userCredentials.getUsername()));
-        httpEntity.getBody().put("password", Collections.singletonList(userCredentials.getPassword()));
-        ResponseEntity<Object> result = restTemplate.exchange(restUtil.getTokenEndpoint(), HttpMethod.POST, httpEntity, Object.class);
-        return result;
+        OAuth2ResponseModel oAuth2ResponseModel = oAuth2RequestBuilder.tokenUri(oauth2TokenEndpoint)
+                .clientId(oauth2ClientId)
+                .clientSecret(oauth2ClientSecret)
+                .scope(List.of(oauth2Scope))
+                .grantType(oauth2GrantType)
+                .username(userCredentials.getUsername())
+                .password(userCredentials.getPassword())
+                .build();
+
+
+        OAuth2RestOperations restTemplate = beanFactory.getBean(OAuth2RestOperations.class, oAuth2ResponseModel);
+        return ResponseEntity.ok(restTemplate.getAccessToken());
     }
 
 }
